--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -18,8 +18,8 @@ Please make sure that you have the following software already installed on your 
 To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your GlassFish server. But first you will need to check-out the XMPPJCA project from SVN (hosted by Google Code). 
 
 ----
-
-=== <a name="step1">Step 1</a> - Check-out the source code ===
+<a name="step1">&nbsp;</a>
+=== Step 1 - Check-out the source code ===
 
 To check-out the source code, refer to the [http://code.google.com/p/xmppjca/source/checkout SVN repository check-out instructions], or have a look at the screenshots below showing how you can use Eclipse to add the repository to your workspace and then check-out the project. You will need to install the  [http://www.polarion.org/index.php?page=overview&project=subversive Polarion Subversive SVN plugin] first though.
 
