--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -17,7 +17,7 @@ Please make sure that you have the following software already installed on your 
 
 To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your GlassFish server. But first you will need to check-out the XMPPJCA project from SVN (hosted by Google Code). 
 
-  * [Installation#Step 1 - Check-out the source code Step 1 - Check-out the source code]
+  * [Installation#Step_1_-_Check-out_the_source_code Step 1 - Check-out the source code]
 
 ----
 
