--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -15,7 +15,7 @@ Please make sure that you have the following software already installed on your 
 
 == How to get started with XMPPJCA in 5 Steps ==
 
-To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your GlassFish server. But first you will need to check-out the XMPPJCA project from SVN (hosted by Google Code). 
+To work with XMPPJCA, you will need to build and deploy both the resource adapter (.rar file) and an enterprise application (.ear file) onto your !GlassFish server. But first you will need to check-out the XMPPJCA project from SVN (hosted by Google Code). 
 
   * [Installation#Step_1_Checkout_the_source_code Step 1 Checkout the source code]
   * [Installation#Step_2_Create_your_project_properties_file Step 2 Create your project properties file]
@@ -41,9 +41,9 @@ Your file structure will look something like Figure 3 below.
 
 http://xmppjca.googlecode.com/files/xmppjca-project-structure.png
 
-If it's not compiling, check to make sure that your GlassFish server runtime library reference (part of your project Build Path) is bound to the actual location of your GlassFish instance on your machine.
+If it's not compiling, check to make sure that your !GlassFish server runtime library reference (part of your project Build Path) is bound to the actual location of your !GlassFish instance on your machine.
 
-* Figure 4: If compilation fails, check to make sure that your GlassFish runtime is bound to proper location on your machine. *
+* Figure 4: If compilation fails, check to make sure that your !GlassFish runtime is bound to proper location on your machine. *
 
 http://xmppjca.googlecode.com/files/xmppjca-project-glassfish-unbound.png
 
@@ -117,7 +117,7 @@ http://xmppjca.googlecode.com/files/xmppjca-project-ant-build-output.png
 
 === Step 4 - Deploy the Resource Adapter (.rar) ===
 
-  # To deploy the resource adapter start your GlassFish server, and then use the asadmin utility to deploy the resource adapter as shown below. The resource adapter will be deployed using the name 'grapevineim-xmpp-connector-1.0'
+  # To deploy the resource adapter start your !GlassFish server, and then use the asadmin utility to deploy the resource adapter as shown below. The resource adapter will be deployed using the name 'grapevineim-xmpp-connector-1.0'
   {{{
   asadmin> deploy grapevineim-xmpp-connector-1.0.rar
   }}}
