--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -129,7 +129,8 @@ http://xmppjca.googlecode.com/files/xmppjca-project-ant-build-output.png
   }}}
   # Now you'll want to create a connection pool of container-managed connections to the resource adapter. Outbound connections that will be created at runtime will be created by a factory class that implements the com.grapevineim.xmpp.!XmppConnectionFactory interface. This interface is defined in the 'api' project and the binding is defined in the ra.xml file (see 'outbound-resourceadapter' element) in file './connector/src/main/resources/META-INF/ra.xml'
   {{{
-  asadmin> create-connector-connection-pool --raname grapevineim-xmpp-connector-1.0 --connectiondefinition com.grapevineim.xmpp.XmppConnectionFactory XmppMessagingConnectorPool
+  asadmin> create-connector-connection-pool --raname grapevineim-xmpp-connector-1.0 --connectiondefinition 
+com.grapevineim.xmpp.XmppConnectionFactory XmppMessagingConnectorPool
   }}}
   # Finally, you'll want to associate the connection pool with a JNDI name. This name is used when doing an explicit JNDI lookup for outbound messaging, and it is also using for inbound messaging as defined in './inbound/source/main/resources/META-INF/sun-ejb-jar.xml' as shown in Figure 9. Basically, when the inbound MDB gets deployed, a JNDI lookup happens  internally in order to register the inbound MDB as the "endpoint" or listener for messages incoming through from the RA (see Step 5 for more info on this). 
   {{{
