--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -172,7 +172,7 @@ LDR5010: All ejb(s) of [grapevineim-xmpp-app-1.0] loaded successfully!|#]
 
 === Step 6 Test the Installation ===
 
-In order to test your installation, you'll need a IM client like [http://pidgin.im pidgin] as well as an IM account with an XMPP messaging service like [http://www.google.com/talk Google Talk]. I'm actually using [http://www.google.com/apps/business/index.html Google Apps] for grapevine.im, so with some DNS magic for the grapevine.im domain entries, I am able to use 'alex' at 'grapevine.im'. 
+In order to test your installation, you'll need a IM client like [http://pidgin.im pidgin] and an IM account with a service provider that supports Jabber / XMPP. I'll be using [http://www.google.com/talk Google Talk] as my service provider. Now Google Talk actually integrates nicely with [http://www.google.com/apps/business/index.html Google Apps] for my grapevine.im domain. I am able to connect to Google Talk from the grapevine.im domain, and in doing so chat with any user on Google Talk (and hopefully other services federated with Goole Talk). It took a while and some research online to to figure out how to make that happen with some [todo DNS magic explained here]. 
 
 TODO continue
 
