Edited wiki page through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -172,9 +172,28 @@ LDR5010: All ejb(s) of [grapevineim-xmpp-app-1.0] loaded successfully!|#]
 
 === Step 6 Test the Installation ===
 
-In order to test your installation, you'll need a IM client like [http://pidgin.im pidgin] and an IM account with a service provider that supports Jabber / XMPP. I'll be using [http://www.google.com/talk Google Talk] as my service provider. Now Google Talk actually integrates nicely with [http://www.google.com/apps/business/index.html Google Apps] for my grapevine.im domain. I am able to connect to Google Talk from the grapevine.im domain, and in doing so chat with any user on Google Talk (and hopefully other services federated with Goole Talk). It took a while and some research online to to figure out how to make that happen with some [todo DNS magic explained here]. 
+In order to test your installation, you'll need a IM client like [http://pidgin.im pidgin] and an IM account with a service provider that supports Jabber / XMPP. I'll be using [http://www.google.com/talk Google Talk] as my service provider. Google Talk actually integrates nicely with [http://www.google.com/apps/business/index.html Google Apps] which I am using for my [http://www.grapevine.im grapevine.im] domain. 
 
-TODO continue
+In this test case, I'll connect my app to Google Talk as 'alex at grapevine.im'. I'll be able to chat with my app using any other Google Talk account (and hopefully other services who are federated with Google Talk). 
+
+I'll add a new buddy as shown in Figures 10 and 11 below.
+
+http://xmppjca.googlecode.com/files/xmppjca-project-properties.png
+
+http://xmppjca.googlecode.com/files/xmppjca-project-properties.png
+
+Then, I will send a message to my app, and receive the messages shown in Figure 12, and 13.
+
+http://xmppjca.googlecode.com/files/xmppjca-project-properties.png
+
+http://xmppjca.googlecode.com/files/xmppjca-project-properties.png
+
+You should notice new log messages in your GlassFish logs as shown below.
+  {{{
+LDR5010: All ejb(s) of [grapevineim-xmpp-app-1.0] loaded successfully!|#]
+  }}}
+
+That's it! Hopefully, the installation worked well for you, but if you have any trouble, please feel free to contact me through by [Support support] page.
 
 [Installation Back to Top of Page]
 ----
