Edited wiki page through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -174,7 +174,32 @@ LDR5010: All ejb(s) of [grapevineim-xmpp-app-1.0] loaded successfully!|#]
 
 In order to test your installation, you'll need a IM client like the Google Talk IM client or [http://pidgin.im pidgin] and an IM account with a service provider that supports Jabber / XMPP. I'll be using [http://www.google.com/talk Google Talk] as my service provider. Google Talk actually integrates with [http://www.google.com/apps/business/index.html Google Apps] which I am using for my [http://www.grapevine.im grapevine.im] domain, however I had to [http://rutger.heijmerikx.nl/2007/6/26/google-talk-for-google-apps-srv-records set DNS SRV records for my domain to make Google Talk work with Google Apps].
 
-In this test case, I'll connect my app to Google Talk as 'alex at grapevine.im'. I'll be able to chat with my app using any other Google Talk account (and hopefully other services who are [http://code.google.com/apis/talk/open_communications.html federated] with Google Talk). 
+In this test case, I'll connect my app to Google Talk as 'alex at grapevine.im'. I'll be able to chat with my app using any other Google Talk account (and hopefully other services who are [http://code.google.com/apis/talk/open_communications.html federated] with Google Talk). Here is what my project.properties file looks like:
+{{{
+  # fully qualified path to your project files
+  project.home=C:\\eclipse\\workspace\\grapevineim-xmpp
+
+  # fully qualified path to your glassfish installation
+  project.j2ee.home=C:\\glassfish
+
+  # project version ID
+  project.version=1.0
+
+  # XMPP server hostname
+  project.xmpp.host=talk.google.com
+
+  # XMPP server port
+  project.xmpp.port=5222
+
+  # XMPP server domain name for user account
+  project.xmpp.domain=grapevine.im
+
+  # XMPP login username
+  project.xmpp.username=alex
+
+  # XMPP login password
+  project.xmpp.password=XXXXXXXX
+  }}}
 
 I'll add a new buddy as shown in Figures 10 and 11 below.
 
